# ppe-safety-system

./: .gitignore  LICENSE  README.md  SETUP.md  app.py  config.py  pyproject.toml  requirements.txt
assets/option_a/: metrics.json
assets/option_b/: README.md  metrics.json
tests/: __init__.py  conftest.py  test_config.py  test_model_utils.py  test_visualization.py
utils/: __init__.py  model_utils.py  ui_components.py  visualization.py
